// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.Tr allowTags 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkGrammar 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkGrammar 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkGrammar 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkGrammar 4`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkHighlight 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkHighlight 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkHighlight 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkHighlight 4`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkSpaces 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkSpaces 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkSpaces 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkSpaces 4`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr className 1`] = `
<tr
  className="uu5-bricks-table-tr my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 1`] = `
<tr
  className="color-schema-default uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 2`] = `
<tr
  className="color-schema-red uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 3`] = `
<tr
  className="color-schema-red uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 4`] = `
<tr
  className="color-schema-red-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 5`] = `
<tr
  className="color-schema-red-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 6`] = `
<tr
  className="color-schema-green uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 7`] = `
<tr
  className="color-schema-green uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 8`] = `
<tr
  className="color-schema-green-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 9`] = `
<tr
  className="color-schema-green-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 10`] = `
<tr
  className="color-schema-yellow uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 11`] = `
<tr
  className="color-schema-yellow uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 12`] = `
<tr
  className="color-schema-yellow-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 13`] = `
<tr
  className="color-schema-yellow-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 14`] = `
<tr
  className="color-schema-purple uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 15`] = `
<tr
  className="color-schema-purple uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 16`] = `
<tr
  className="color-schema-purple-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 17`] = `
<tr
  className="color-schema-purple-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 18`] = `
<tr
  className="color-schema-brown uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 19`] = `
<tr
  className="color-schema-brown uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 20`] = `
<tr
  className="color-schema-brown-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 21`] = `
<tr
  className="color-schema-brown-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 22`] = `
<tr
  className="color-schema-orange uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 23`] = `
<tr
  className="color-schema-orange uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 24`] = `
<tr
  className="color-schema-orange-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 25`] = `
<tr
  className="color-schema-orange-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 26`] = `
<tr
  className="color-schema-cyan uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 27`] = `
<tr
  className="color-schema-cyan uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 28`] = `
<tr
  className="color-schema-cyan-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 29`] = `
<tr
  className="color-schema-cyan-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 30`] = `
<tr
  className="color-schema-grey uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 31`] = `
<tr
  className="color-schema-grey uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 32`] = `
<tr
  className="color-schema-grey-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 33`] = `
<tr
  className="color-schema-grey-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 34`] = `
<tr
  className="color-schema-pink uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 35`] = `
<tr
  className="color-schema-pink uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 36`] = `
<tr
  className="color-schema-pink-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 37`] = `
<tr
  className="color-schema-pink-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema 38`] = `
<tr
  className="color-schema-pink uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr content 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr content 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr content 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr content 4`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr controlled 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr controlled 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr controlled 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr controlled 4`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr default props 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr disabled 1`] = `
<tr
  className="uu5-bricks-table-tr uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</tr>
`;

exports[`UU5.Bricks.Table.Tr disabled 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr disabled 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr disabled 4`] = `
<tr
  className="uu5-bricks-table-tr uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</tr>
`;

exports[`UU5.Bricks.Table.Tr docKit examples UU5.Bricks.Table.Tr should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-table"
    id="uuID2"
    style={Object {}}
    title={null}
  >
    <h1
      className="uu5-bricks-header uu5-common-text"
      id="uuID2-header"
      style={Object {}}
      title={null}
    >
      Table
    </h1>
    <table
      className="uu5-bricks-table-table"
    >
      <thead
        className="uu5-bricks-table-thead"
        style={Object {}}
        title={null}
      >
        <tr
          className="color-schema-red uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <th
            className="uu5-bricks-table-th uu5-common-text"
            style={Object {}}
            title={null}
          >
            Name
          </th>
          <th
            className="uu5-bricks-table-th uu5-common-text"
            style={Object {}}
            title={null}
          >
            Rank
          </th>
          <th
            className="uu5-bricks-table-th uu5-common-text"
            style={Object {}}
            title={null}
          >
            Promotion prospects
          </th>
        </tr>
      </thead>
      <tbody
        className="uu5-bricks-table-tbody"
        style={Object {}}
        title={null}
      >
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            Rimmer
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            2nd class technician
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            comical
          </td>
        </tr>
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            Kristine Kochanski
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            1st console officer
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            high
          </td>
        </tr>
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            Dave Lister
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            3rd class technician
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            zero
          </td>
        </tr>
      </tbody>
      <tfoot
        className="uu5-bricks-table-tfoot"
        style={Object {}}
        title={null}
      >
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <th
            className="uu5-bricks-table-th uu5-common-text"
            style={Object {}}
            title={null}
          >
            Best rank
          </th>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            1st console officer
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`UU5.Bricks.Table.Tr dynamic 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr dynamic 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr dynamic 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr dynamic 4`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr hidden 1`] = `
<tr
  className="uu5-bricks-table-tr uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr hidden 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr hidden 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr hidden 4`] = `
<tr
  className="uu5-bricks-table-tr uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr id 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr ignoreHTML 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr ignoreHTML 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr ignoreHTML 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr ignoreHTML 4`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr mainAttrs 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr name 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 4`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 5`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 6`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 7`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 8`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 9`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 10`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 11`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 12`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 13`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 14`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 15`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 16`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 17`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 18`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Table.Tr nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Table.Tr noIndex 1`] = `
<tr
  className="uu5-bricks-table-tr uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr noIndex 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr noIndex 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr noIndex 4`] = `
<tr
  className="uu5-bricks-table-tr uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr props.allowTags example 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content="Table"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID1-header"
    ignoreInnerHTML={false}
    key="uuID1-header"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-thead
      allowTags={
        Array [
          "UU5.Example.MyCompButton",
        ]
      }
      className={null}
      colorSchema="danger"
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uesID1"
      ignoreInnerHTML={false}
      key="uesID1"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uesID2"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Name"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uesID3"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Rank"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uesID4"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <MyAllowTagsComponents
          className={null}
          content="AllowTags Content"
          id="uesID5"
          mainAttrs={null}
          name={null}
          noIndex={false}
          ref_={null}
          style={null}
          tooltip={null}
        />
      </table-tr>
    </table-thead>
    <table-tbody
      allowTags={Array []}
      className={null}
      colorSchema="blue"
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID2"
      ignoreInnerHTML={false}
      key="uuID2"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uuID3"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Rimmer"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID4"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="2nd class technician"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID5"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="comical"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID6"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
      </table-tr>
    </table-tbody>
    <table-tfoot
      allowTags={Array []}
      className={null}
      colorSchema="danger"
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID7"
      ignoreInnerHTML={false}
      key="uuID7"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uuID8"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Best rank"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID9"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="1st console officer"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID10"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
      </table-tr>
    </table-tfoot>
  </table>
  <Footer
    className={null}
    content="Table footer"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID1-footer"
    ignoreInnerHTML={false}
    key="uuID1-footer"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.Table.Tr pureRender 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr pureRender 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr pureRender 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr pureRender 4`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr selected 1`] = `
<tr
  className="uu5-bricks-table-tr uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr selected 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr selected 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr selected 4`] = `
<tr
  className="uu5-bricks-table-tr uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr style 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr style 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr style 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr style 4`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr textCorrector 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr textCorrector 2`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr textCorrector 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr textCorrector 4`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr tooltip 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
